points for questions in a running tally. Different tracks depending on answers showen

--- a/css/styles.css
+++ b/css/styles.css
@@ -17,3 +17,14 @@ body {
   height: 220px;
 
 }
+
+.answerC {
+  display: none;
+}
+
+.answerREACT {
+  display: none;
+}
+.answerRuby {
+  display: none;
+}
